--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,20 +1,34 @@
+# MultiChat, chat format plugin for Multipass
+#
 general:
+# Messages language. Supported languages:
+# eng - English
   language: default
+# Save translation file
   language-save: false
+# Debug mode. Usually you don't need to turn it on
   debug: false
 chat:
+# Default chat format
   format: '&2%prefix%a2%player%&e: %message%'
 name-tag:
+# Default name-tag format
   enable: true
   format: '&a%prefix%&6%player%'
 display-name:
+# Enable display name (shown by TAB-key)
   enable: true
+# Remove color codes from display name
   strip-colors: false
+
+# Per-group formats configuration
 group:
+# Scan sub-groups (group in groups)
   scan-subgroups: true
+# Chat format 
   format:
-    default:
-      chat: '&5[GUEST]&3%player%&a: 6%message%'
-    vip:
-      chat: '&6[VIP]&4%player%&a: %message%'
-      name-tag: '&6[VIP] &4%player%'
+    default: # Group name
+      chat: '&5[GUEST]&3%player%&a: 6%message%' # Chat format
+    vip: # Group name
+      chat: '&6[VIP]&4%player%&a: %message%' # Chat format
+      name-tag: '&6[VIP] &4%player%' # Name tag format
