--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -15,6 +15,8 @@ name-tag:
 # Default name-tag format
   enable: true
   format: '&a%prefix%&6%player%'
+# Remove color codes from name tags
+  strip-colors: false
 display-name:
 # Enable display name (shown by TAB-key)
   enable: true
